--- a/source/_patterns/01-atoms/images/_img.twig
+++ b/source/_patterns/01-atoms/images/_img.twig
@@ -1,3 +1,5 @@
+
+{% set img = random(['/images/sample/images/pic02.jpg', '/images/sample/images/pic03.jpg', '/images/sample/images/pic04.jpg'])  %}
 {# if we're in pattern lab and there's no specific `img`, let's do a placeholder image #}
 {% if pl and not img %}
   {# default image style is `medium` #}
